--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Webcomponent hax-painting following open-wc recommendations",
   "license": "MIT",
   "author": "hax-painting",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "main": "index.js",
   "module": "index.js",
   "scripts": {
@@ -14,7 +14,8 @@
     "test": "web-test-runner --coverage",
     "test:watch": "web-test-runner --watch",
     "storybook": "npm run analyze -- --exclude dist && web-dev-server -c .storybook/server.mjs",
-    "storybook:build": "npm run analyze -- --exclude dist && build-storybook"
+    "storybook:build": "npm run analyze -- --exclude dist && build-storybook",
+    "js": "rollup --config"
   },
   "dependencies": {
     "lit": "^2.0.2"
@@ -30,7 +31,8 @@
     "eslint-config-prettier": "^8.3.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "rollup": "^2.70.1"
   },
   "customElements": "custom-elements.json",
   "eslintConfig": {
