--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
     "@custom-elements-manifest/analyzer": "^0.4.17",
     "@open-wc/eslint-config": "^4.3.0",
     "@open-wc/testing": "next",
+    "@rollup/plugin-node-resolve": "^13.0.6",
     "@web/dev-server": "^0.1.28",
     "@web/dev-server-storybook": "next",
+    "@web/rollup-plugin-html": "^1.10.1",
+    "@web/rollup-plugin-import-meta-assets": "^1.0.7",
     "@web/test-runner": "^0.13.22",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "prettier": "^2.4.1",
-    "rollup": "^2.70.1"
+    "rollup": "^2.60.1"
   },
   "customElements": "custom-elements.json",
   "eslintConfig": {
