--- a/package.json
+++ b/package.json
@@ -22,21 +22,27 @@
     "lit": "^2.0.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.4",
     "@custom-elements-manifest/analyzer": "^0.4.17",
+    "@open-wc/building-rollup": "^2.0.1",
     "@open-wc/eslint-config": "^4.3.0",
     "@open-wc/testing": "next",
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@web/dev-server": "^0.1.28",
     "@web/dev-server-storybook": "next",
     "@web/rollup-plugin-html": "^1.10.1",
     "@web/rollup-plugin-import-meta-assets": "^1.0.7",
     "@web/test-runner": "^0.13.22",
+    "babel-plugin-template-html-minifier": "^4.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "prettier": "^2.4.1",
-    "rollup": "^2.60.1"
+    "rollup": "^2.60.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-workbox": "^6.2.0"
   },
   "customElements": "custom-elements.json",
   "eslintConfig": {
