--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "js": "rollup --config"
   },
   "dependencies": {
-    "lit": "^2.0.2"
+    "lit": "^2.0.2",
+    "planetscale-node": "^0.3.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.4",
