--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "planetscale-node": "^0.3.0",
     "async": "^2.6.4",
     "ejs": ">=3.1.7",
-    "trim": "0.0.3"
+    "trim": "^0.0.3"
   },
   "devDependencies": {
     "rollup-plugin-copy": "3.4.0",
